rt-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rt-deploy
spec:
  selector:
    matchLabels:
      run: rt-pod
  template:
    metadata:
      name: rt-pod
      namespace: rt-dev
      labels:
        run: rt-pod
    spec:
      containers:
      - name: postgres
        image: orchardup/postgresql
        command: ["/usr/local/bin/run"]
        volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/9.3
      - name: rt-run
        image: jrprice/rt-dev
        ports:
          - containerPort: 80
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgresclaim
