rt-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: rt-svc
  labels:
    run: rt-pod
spec:
  type: ClusterIP
  selector:
    run: rt-pod
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
    name: http
