rt-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rt-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: rt-svc
          servicePort: 8080
